<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Electuga</string>
    <string name="updatetime">Dt actualização</string>
    <string name="numberOfSattelites">Nr. Postos</string>
    <string name="type">Tipo</string>
    <string name="operator">Operador</string>
    <string name="navigate">Ir para o posto</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

</resources>